@@ -1,3 +1,5 @@
+* Add confirmation message on automatically generated button
+
 Version 1.4 - 2015-05-29
 
 Version 1.3 - 2015-01-22
